Prepare open sourcing on github

--- a/google_stitch/dashboard.html
+++ b/google_stitch/dashboard.html
@@ -2,7 +2,7 @@
 <html class="light" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>TaskFlow Kanban Dashboard</title>
+<title>tiny-kanban Kanban Dashboard</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
@@ -50,7 +50,7 @@
 <path d="M24 45.8096C19.6865 45.8096 15.4698 44.5305 11.8832 42.134C8.29667 39.7376 5.50128 36.3314 3.85056 32.3462C2.19985 28.361 1.76794 23.9758 2.60947 19.7452C3.451 15.5145 5.52816 11.6284 8.57829 8.5783C11.6284 5.52817 15.5145 3.45101 19.7452 2.60948C23.9758 1.76795 28.361 2.19986 32.3462 3.85057C36.3314 5.50129 39.7376 8.29668 42.134 11.8833C44.5305 15.4698 45.8096 19.6865 45.8096 24L24 24L24 45.8096Z"></path>
 </svg>
 </div>
-<h2 class="text-[#0d141b] dark:text-slate-100 text-xl font-bold tracking-tight">TaskFlow</h2>
+<h2 class="text-[#0d141b] dark:text-slate-100 text-xl font-bold tracking-tight">tiny-kanban</h2>
 </div>
 <nav class="flex-1 px-3 space-y-1">
 <a class="flex items-center gap-3 px-3 py-2 text-primary bg-primary/10 rounded-lg font-semibold transition-colors" href="#">
