--- a/google_stitch/archived_cards.html
+++ b/google_stitch/archived_cards.html
@@ -2,7 +2,7 @@
 <html class="light" lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Archived Cards List - TaskFlow Board</title>
+<title>Archived Cards List - tiny-kanban Board</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&amp;family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 <script id="tailwind-config">
@@ -43,7 +43,7 @@
 <div class="size-8 text-primary flex items-center justify-center">
 <span class="material-symbols-outlined text-3xl">view_kanban</span>
 </div>
-<h2 class="text-lg font-bold leading-tight tracking-tight dark:text-white">TaskFlow</h2>
+<h2 class="text-lg font-bold leading-tight tracking-tight dark:text-white">tiny-kanban</h2>
 </div>
 <div class="flex-1 p-4 flex flex-col gap-6">
 <nav class="flex flex-col gap-1">
